--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "hamburger-react": "^2.5.0",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-multi-carousel": "^2.8.2"
   }
 }
